fix: overflow-x deleted

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
   background-color: #f9fafb;
   line-height: 1.5;
   color: #333;
-  overflow-x: hidden;
 }
 
 header {
